# Tabby

./: Cargo.toml  README.md
main/: main.tabby  main.tabbyic  wow.tabby  wow.tabbyic
src/: ast.rs  ast_evaluator.rs  compile.rs  dir_func.rs  dir_var.rs  execute.rs  main.rs  mem_ptr.rs  memory.rs  quadruples.rs  semantic_cube.rs  tabby.lalrpop  tests.rs  tipo.rs  vir_mem.rs  virtual_machine.rs
tests/: arr_dec_fail_1.tabby  customTest.tabby  dirs_fail_1.tabby  dirs_fail_3.tabby  dirs_ok_1.tabby  quads_call_ok_1.tabby  quads_fns_ok_1.tabby  quads_for_ok_1.tabby  quads_mat_ok_1.tabby  quads_non_linear_ok_1.tabby  quads_ok_1.tabby  quads_ret_ok_1.tabby  quads_while_ok_1.tabby  return_fail_3.tabby  tests.rs  too_many_vars_fail_1.tabby  undec_arr_fail_1.tabby  undec_fn_fail_1.tabby  undec_var_fail_1.tabby  undec_var_fail_3.tabby  vir_mem_ok_1.tabby  vir_mem_ok_2.tabby
tests_compile/: dims_fail_1.tabby  dirs_fail_2.tabby  dirs_ok_1.tabby  fns_param_list_ok_1.tabby  fns_size_ok_1.tabby  if_fail_1.tabby  mat_dec_fail_1.tabby  quads_arr_ok_1.tabby  quads_fail_1.tabby  quads_if_else_ok_1.tabby  quads_if_ok_1.tabby  quads_ok_2.tabby  quads_ret_ok_2.tabby  return_fail_1.tabby  return_fail_2.tabby  return_fail_4.tabby  undec_mat_fail_1.tabby  undec_var_fail_2.tabby
tests_execute/: arithmetic_ok_1.tabby  arithmetic_ok_1.tabbyic  arrays_ok_1.tabby  arrays_ok_1.tabbyic  assign_ok_1.tabby  assign_ok_1.tabbyic  boolean_ops_ok_1.tabby  boolean_ops_ok_1.tabbyic  comps_ok_1.tabby  comps_ok_1.tabbyic  fns_ok_1.tabby  fns_ok_1.tabbyic  fns_ok_2.tabby  fns_ok_2.tabbyic  fns_ok_3.tabby  (+33 more)
(+40 files in other folders)
