[package]
name = "tabby"
version = "0.1.0"
edition = "2021"
authors = ["Diego Garcia Rodriguez del Campo <A01700203@tec.mx>"]
build = "build.rs"

[build-dependencies] 
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1"

[[bin]]
name="compile"
path="src/compile/main.rs"


[[bin]]
name="execute"
path="src/execute/main.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"